fix(HourSelector): Fix unreachable HourSelector on Firefox

--- a/src/components/MapControls/mapControls.css
+++ b/src/components/MapControls/mapControls.css
@@ -2,6 +2,7 @@
   background-color: transparent !important;
   border-radius: 100% !important;
   box-shadow: none !important;
+  pointer-events: all;
 }
 
 .mapboxgl-ctrl-group button:focus:last-child,
@@ -35,4 +36,8 @@
   background-color: white !important;
   width: 3em !important;
   height: 3em !important;
+}
+
+.overlays {
+  pointer-events: none;
 }
